<resources>
    <string name="app_name">Projekat_avgust</string>
    <string name="remember_me">Remember me</string>
    <string name="sign_in">Sign In</string>
    <string name="log_out">Log out</string>
    <string name="users_overview">Users overview</string>
    <string name="user_creation">User creation</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="nav_header_desc">nav_header_desc</string>
    <string name="delete_employee">Delete employee</string>
    <string name="update_employee">Update employee</string>
    <string name="employee_details">Employee details</string>
    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>
    <string name="submit">Submit</string>
    <string name="age">Age</string>
    <string name="salary">Salary</string>
    <string name="name">Name</string>
    <string name="add_a_new_employee">Add a new employee</string>
    <string name="recently_added_employees">Recently added employees</string>
    <string name="raf_user_management">RAF User management</string>
</resources>