<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">


    <RadioGroup
        android:id="@+id/radioGroupEmployees"
        android:layout_width="300dp"
        android:layout_height="93dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.28">

        <RadioButton
            android:id="@+id/deleteRb"
            android:layout_width="200dp"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:buttonTint="#1A99C4"
            android:text="@string/delete_employee" />

        <RadioButton
            android:id="@+id/updateRb"
            android:layout_width="200dp"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:buttonTint="#1A99C4"
            android:text="@string/update_employee"
            tools:layout_editor_absoluteX="35dp"
            tools:layout_editor_absoluteY="54dp" />

        <RadioButton
            android:id="@+id/detailedRb"
            android:layout_width="200dp"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:buttonTint="#1A99C4"
            android:text="@string/employee_details"
            tools:layout_editor_absoluteX="35dp"
            tools:layout_editor_absoluteY="54dp" />
    </RadioGroup>

    <Button
        android:id="@+id/cancelBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="52dp"
        android:background="#00FFFFFF"
        android:text="@string/cancel"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroupEmployees"
        app:layout_constraintVertical_bias="0.25" />

    <Button
        android:id="@+id/okBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="60dp"
        android:background="#00FFFFFF"
        android:text="@string/ok"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroupEmployees"
        app:layout_constraintVertical_bias="0.25" />


</androidx.constraintlayout.widget.ConstraintLayout>